deployment/environments/production/patches/Deployment.adservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
spec:
  template:
    spec:
      containers:
        - name: server
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi # Strict limit to prevent node crash
