deployment/environments/production/patches/Deployment.cartservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
spec:
  template:
    spec:
      containers:
        - name: server
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          # Increase initial delay to allow the service enough time to boot
          livenessProbe:
            initialDelaySeconds: 30
          readinessProbe:
            initialDelaySeconds: 30
